// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with challenge suggestion renders correctly 1`] = `
<StepDetailScreen
  CenterHeader={null}
  RightHeader={
    <Button
      buttonTextStyle={
        Object {
          "color": "#A0A2A6",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": 1,
        }
      }
      onPress={[Function]}
      style={
        Object {
          "paddingRight": 10,
        }
      }
      text="REMOVE STEP"
      type="transparent"
    />
  }
  bottomButtonProps={
    Object {
      "onPress": [Function],
      "text": "I Did It!",
    }
  }
  markdown="roge rules"
  stepId="234242"
  text="ROBERT"
/>
`;

exports[`without challenge suggestion renders correctly 1`] = `
<StepDetailScreen
  CenterHeader={null}
  RightHeader={
    <Button
      buttonTextStyle={
        Object {
          "color": "#A0A2A6",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": 1,
        }
      }
      onPress={[Function]}
      style={
        Object {
          "paddingRight": 10,
        }
      }
      text="REMOVE STEP"
      type="transparent"
    />
  }
  bottomButtonProps={
    Object {
      "onPress": [Function],
      "text": "I Did It!",
    }
  }
  markdown={null}
  stepId="234242"
  text="ROBERT"
/>
`;
